# OpenBTS

./: Makefile.am  README.md  configure.ac  git-svn-check-unpushed  git-svn-externals-update
.svn/: all-wcprops  entries
.svn/text-base/: git-svn-clone-externals.svn-base  git-svn-externals-check.svn-base
BRC2013/.svn/: all-wcprops  entries
BRC2013/conf/: cdrbuild.conf  cdrfile.conf  rmanager.conf  yate.conf
BRC2013/conf/.svn/: all-wcprops  entries
BRC2013/scripts/: bman.js  libsql.js
BRC2013/scripts/.svn/: all-wcprops  entries
BRC2013/sounds/: FindARange.gsm
BRC2013/sounds/.svn/: all-wcprops  entries
BRC2013/sql/.svn/: all-wcprops  entries
BRC2013/tools/: MT-SMS-Example.txt  MT-SMS-Test.sh
BRC2013/tools/.svn/: all-wcprops  entries
CommonLibs/.svn/: all-wcprops  entries
CommonLibs/branches/.svn/: all-wcprops  entries
CommonLibs/developers/.svn/: all-wcprops  entries
CommonLibs/features/.svn/: all-wcprops  entries
CommonLibs/tags/.svn/: all-wcprops  entries
CommonLibs/trunk/.svn/: all-wcprops  entries
RRLP/.svn/: all-wcprops  entries
RRLP/developers/.svn/: all-wcprops  entries
RRLP/features/.svn/: all-wcprops  entries
RRLP/tags/.svn/: all-wcprops  entries
RRLP/tags/RRLP-P2.8.0/: MAP-Protocol.asn  RRLP-Components.asn  log2per.py  rrfake  rrlpserver.cgi  sendrrlpbody.erl  util.erl  xrrlp.erl
RRLP/trunk/: RRLP-Messages.asn  RRLP.set.asn  parseargs.escript  rrlpserver.erl  testall.sh
RRLP/trunk/.svn/: all-wcprops  entries
RRLP/trunk/tests/: good_pos.per  ms_based.per
TransceiverRAD1/: Makefile.am  PowerScanner.cpp  RAD1RxRawPower.cpp  RAD1RxRawPowerSweep.cpp  RAD1ping.cpp  Transceiver.cpp  bladeRFDevice.cpp  bladeRFDevice.h  hostedx115bts.rbf  hostedx40bts.rbf  runTransceiver.cpp
a53/.svn/: all-wcprops  entries
a53/developers/.svn/: all-wcprops  entries
a53/features/.svn/: all-wcprops  entries
a53/tags/.svn/: all-wcprops  entries
a53/trunk/: gea_test.ok
a53/trunk/.svn/: all-wcprops  entries
manuals/.svn/: all-wcprops  entries
manuals/OpenBTS-P-User/.svn/: all-wcprops  entries
openbts/.svn/: all-wcprops  entries
openbts/branches/.svn/: all-wcprops  entries
openbts/developers/.svn/: all-wcprops  entries
openbts/features/.svn/: all-wcprops  entries
openbts/features/Cognitive_Radio_Elsabagh/: .project  LEGAL  README  config.h.in  configure
openbts/features/Cognitive_Radio_Elsabagh/Control/: CollectMSInfo.cpp  ControlCommon.cpp  DCCHDispatch.cpp  Makefile.am  Makefile.in
openbts/features/Cognitive_Radio_Elsabagh/Control/.svn/: all-wcprops  entries
openbts/features/Cognitive_Radio_Elsabagh/Control/.svn/text-base/: CallControl.cpp.svn-base  CollectMSInfo.h.svn-base  ControlCommon.h.svn-base  MobilityManagement.cpp.svn-base  README.Control.svn-base  RRLPQueryController.cpp.svn-base  RRLPQueryController.h.svn-base  RadioResource.cpp.svn-base  SMSControl.cpp.svn-base
openbts/features/Cognitive_Radio_Elsabagh/Transceiver52M/: Makefile.am  Makefile.in  Transceiver.h  USRPDevice.cpp  radioDevice.h  runTransceiver.cpp  sigProcLibTest.cpp
openbts/features/Cognitive_Radio_Elsabagh/Transceiver52M/.svn/: all-wcprops  entries
openbts/features/Cognitive_Radio_Elsabagh/Transceiver52M/.svn/text-base/: Complex.h.svn-base  Transceiver.cpp.svn-base  USRPDevice.h.svn-base  USRPping.cpp.svn-base  radioInterface.cpp.svn-base  radioInterface.h.svn-base  sigProcLib.cpp.svn-base  sigProcLib.h.svn-base
openbts/tags/.svn/: all-wcprops  entries
openbts/trunk/: Makefile.am  configure.ac
openbts/trunk/.svn/: all-wcprops  dir-prop-base  entries
openbts/trunk/SR/: runloop.sipauthserve.sh  subscriberserver.cpp
openbts/trunk/Transceiver52M/: Makefile.am  bladeRFDevice.cpp  bladeRFDevice.h  hostedx115bts.rbf  hostedx40bts.rbf
smqueue/.svn/: all-wcprops  entries
smqueue/branches/.svn/: all-wcprops  entries
smqueue/branches/P3.1/: AUTHORS  Makefile.common
smqueue/developers/.svn/: all-wcprops  entries
smqueue/features/.svn/: all-wcprops  entries
smqueue/tags/.svn/: all-wcprops  entries
smqueue/tags/rP3.1.3/: Makefile.am
smqueue/trunk/.svn/: all-wcprops  dir-prop-base  entries
smqueue/trunk/GSM/: GSML3CCElements.cpp
smqueue/trunk/SR/: subscriberRegistry.example.sql
smqueue/trunk/debian/: control
smqueue/trunk/smqueue/: Makefile.am  diskbackup.cpp  runloop.smqueue.sh  smcommands.cpp  smnet.cpp  smqueue.cpp  smqueue.h
smqueue/trunk/smqueue/.svn/: all-wcprops  dir-prop-base  entries
smqueue/trunk/smqueue/.svn/text-base/: diskbackup.h.svn-base  smqueue.example.sql.svn-base  smsc.cpp.svn-base
smqueue/trunk/testing/: Makefile.am  smtest.h
smqueue/trunk/tools/: Makefile.am
sqlite3/.svn/: all-wcprops  entries
sqlite3/branches/.svn/: all-wcprops  entries
sqlite3/developers/.svn/: all-wcprops  entries
sqlite3/features/.svn/: all-wcprops  entries
sqlite3/tags/.svn/: all-wcprops  entries
sqlite3/trunk/.svn/: all-wcprops  entries
subscriberRegistry/.svn/: all-wcprops  entries
subscriberRegistry/branches/.svn/: all-wcprops  entries
subscriberRegistry/branches/P3.1/: Makefile  servershare.h
subscriberRegistry/developers/.svn/: all-wcprops  entries
subscriberRegistry/features/.svn/: all-wcprops  entries
subscriberRegistry/trunk/: srmanager.cpp
(+1002 files in other folders)
